Thu Feb 24 11:43:00 2000  Ran Cabell <rcabell@norfolk.infi.net>

	* libm/mathfp/sf_atan2.c: Fix atan2 typo for _DOUBLE_IS_32_BITS.
	* libm/mathfp/sf_atan.c: Ditto.

Thu Feb 24 11:39:00 2000  Joel Sherrill <joel@OARcorp.com>

	* libc/include/sys/stat.h: Add RTEMS prototype for lstat.

Tue Feb 22 14:37:00 2000  Ran Cabell <rcabell@norfolk.infi.net>

	* libm/mathfp/sf_exp.c: Corrected _DOUBLE_IS_32_BITS to be
	_DOUBLE_IS_32BITS.

Mon Feb 21 11:43:50 2000  Jeff Johnston <jjohnstn@cygnus.com>

	* libc/stdio/vfprintf.c (VFPRINTF): Added CHECK_INIT
	call prior to calling _VFPRINTF_R so reentrant data area is set.
	(_VFPRINTF_R): Removed now extraneous CHECK_INIT call.

Thu Feb 17 01:42:50 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* libc/stdio/vfscanf.c (limits.h): #include.
	(MAX_LONG_LEN): #define.
	(__svfscanf): Handle floating point numbers with arbitrary amounts
	of leading zeroes.

2000-02-15  Nick Clifton  <nickc@cygnus.com>

	* libc/sys/arm/syscalls.c (_fstat): Initialise all fields to
	zero.  Set the blocksize to 1024/

Thu Jan 20 18:57:00 2000  Fernando Nasser <fnasser@redhat.com>

	* setvbuf.c (setvbuf):  Set size to BUFSIZ when passed a zero size
	with line buffering.

Mon Jan 10 18:43:00 2000  Jeff Johnston <jjohnstn@cygnus.com>

	* acinclude.m4: Changed include directory for winsup headers. 
	* aclocal.m4 configure libc/aclocal.m4
	  libc/configure libc/ctype/Makefile.in libc/errno/Makefile.in
	  libc/locale/Makefile.in libc/machine/aclocal.m4
	  libc/machine/configure libc/machine/a29k/aclocal.m4
	  libc/machine/a29k/configure libc/machine/arm/aclocal.m4
	  libc/machine/arm/configure libc/machine/d10v/aclocal.m4
	  libc/machine/d10v/configure libc/machine/d30v/aclocal.m4
	  libc/machine/d30v/configure libc/machine/fr30/aclocal.m4
	  libc/machine/fr30/configure
	  libc/machine/h8300/aclocal.m4
	  libc/machine/h8300/configure libc/machine/h8500/aclocal.m4
	  libc/machine/h8500/configure libc/machine/hppa/aclocal.m4